<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/list_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2.5"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#0a2f50"  />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="#4aa4f2"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:text="@string/dollar_symbol"
                android:textColor="#4aa4f2"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="@dimen/list_margin">

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_example"
            android:padding="@dimen/list_margin"/>

        <Button
            android:focusable="false"
            android:id="@+id/sale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_button"
            android:layout_marginEnd="4dp"
            android:textAllCaps="true"/>

    </LinearLayout>
</LinearLayout>